<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity2">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/thename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name"/>
        <TextView
                android:text="@string/thepass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView2"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/pass"/>
        <Button
                android:text="@string/write_pref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/wpref" android:textColor="#000000"/>
        <Button
                android:text="@string/read_pref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/readpref"/>
        <Button
                android:text="@string/writesql"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/ws"/>
        <Button
                android:text="@string/readsql"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rs"/>
    </LinearLayout>
</RelativeLayout>